# dts-validator

./: LICENSE  Pipfile  README.md  pyproject.toml
dts_validator/: main.py
dts_validator/mocks/: collection_responses.py  document_responses.py  navigation_responses.py
dts_validator/schemas/: collection_response_schema.json
dts_validator/services/: DTSResponseValidator.py
dts_validator/templates/: index.html
dts_validator/views/api/: mock_api.py  validate_endpoints.py  validate_response.py
